BUGFIX: Hero Images Block now renders its image properly on mobile.
Also added some much needed margin for the carousel indicators on mobile.

--- a/jetstream/static/jetstream/css/blocks/hero_image.scss
+++ b/jetstream/static/jetstream/css/blocks/hero_image.scss
@@ -81,6 +81,7 @@
 
   &__background {
     background-position: center;
+    background-size: cover;
   }
 
   &__body {
