--- a/jetstream/static/jetstream/css/mixins.scss
+++ b/jetstream/static/jetstream/css/mixins.scss
@@ -150,6 +150,7 @@
   right: 3%;
   bottom: 3%;
   position: static;
+  margin-top: 1rem;
 
   @include portrait-tablet {
     position: absolute;
